feat: concert domain 코드 수정